--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <title>Angular Electron</title>
   <base href="/">
-
+  <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
 </head>
-<body>
-  <app-root>Loading...</app-root>
+<body style="background-color: black;">
+  <app-root></app-root>
 </body>
 </html>
